# desk-control-panel

./: .gitignore  Cargo.toml  README.md  mise.toml
.cargo/: config.toml  probe-rs.toml
src/: lib.rs  meeting_duration.rs  meeting_instruction.rs
src/control_panel/: state.rs
tests/: example_test.rs  meeting_instruction.rs
