[package]
edition = "2021"
name = "desk-control-panel"
version = "0.1.0"

# Embedded-test set up. See https://github.com/probe-rs/embedded-test/blob/master/examples/esp32c6/Cargo.toml
[lib]
test = false  # To make plain `cargo test` work: Disable tests for the bin, because we are only using the intergration tests
bench = false # To make `cargo check --all-targets` work.

[[bin]]
name = "control_panel"
path = "src/bin/control_panel.rs"
test = false                      # To make plain `cargo test` work: Disable tests for the bin, because we are only using the integration tests
bench = false                     # To make `cargo check --all-targets` work.

[[bin]]
name = "meeting_sign"
path = "src/bin/meeting_sign.rs"
test = false                     # To make plain `cargo test` work: Disable tests for the bin, because we are only using the integration tests
bench = false                    # To make `cargo check --all-targets` work.

[dependencies]
cobs = { version = "0.5.1", default-features = false, features = ["defmt"] }
critical-section = "1.2.0"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt"] }
embedded-graphics = "0.8.2"
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
esp-backtrace = { version = "0.18.1", features = [
  "esp32c3",
  "panic-handler",
  "println",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"] }
esp-hal = { version = "1.0.0", features = [
  "defmt",
  "esp32c3",
  "unstable",
] }
esp-rtos = { version = "0.2.0", features = ["defmt", "esp32c3", "embassy"] }
esp-println = { version = "0.16.1", features = [
  "esp32c3",
  "defmt-espflash",
  "log-04",
] }
heapless = { version = "0.9.2", features = ["defmt"] }
log = "0.4.29"
micromath = "2.1.0"
num-traits = { version = "0.2.19", default-features = false }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
postcard = { version = "1.1.3", features = ["use-defmt"] }
rotary-encoder-hal = { version = "0.6.0", features = [
  "defmt",
  "table-decoder",
] }
rtt-target = { version = "0.6.2", features = ["defmt"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
ssd1306 = "0.10.0"
static_cell = "2.1.1"
thiserror = { version = "2.0.18", default-features = false }

[dev-dependencies]
embedded-test = { version = "0.7.1", default-features = false, features = [
  "defmt",
  "embassy",
  "external-executor",
] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[[test]]
name = "meeting_instruction"
harness = false              # Important: As we bring our own test harness, we need to disable the default one
